--- a/assessment/package.json
+++ b/assessment/package.json
@@ -11,10 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chart.js": "^2.9.4",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
+    "env": "0.0.2",
     "express": "^4.17.1",
+    "jquery": "^3.5.1",
     "loading-cli": "^1.1.0",
+    "mongodb": "^3.6.2",
+    "mongoose": "^5.10.11",
     "nodemon": "^2.0.6",
     "seeder": "^0.2.4"
   }
