--- a/assessment/package.json
+++ b/assessment/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "chart.js": "^2.9.4",
+    "chartjs": "^0.3.24",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "env": "0.0.2",
